<resources>
    <string name="app_name">TrackMyFuel</string>
    <string name="total">Total...</string>
    <string name="to">To...</string>
    <string name="from">From...</string>
    <string name="add">Add</string>
    <string name="km">km</string>
    <string name="records">Records</string>
    <string name="inside">Inside</string>
    <string name="average">Average</string>
    <string-array name="spinner">
        <item>@string/inside</item>
        <item>@string/average</item>
        <item>@string/outside</item>
    </string-array>

    <string name="outside">Outside</string>

    <string name="title_activity_modify_record">Modify Record</string>
    <string name="title_activity_add_payer">Add Payer</string>

    <string name="update">Update</string>
    <string name="delete">delete</string>

    <string name="negative">no</string>
    <string name="positive">yes</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!--Titles-->
    <string name="title_all_records">All Records</string>
    <string name="title_bill">Bill</string>
    <string name="title_payment">Payment</string>
    <string name="title_my_records">My Records</string>
    <string name="title_settings">Settings</string>

    <!--Navigation drawer-->
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="nav_drawer_group_functions">Functions</string>

    <!--Placeholders for preview developing purposes-->
    <string name="placeholder_name" translatable="false">Hank Hankinson</string>
    <string name="placeholder_title" translatable="false">Beautiful Title</string>
    <string name="placeholder_text" translatable="false">Text</string>
    <string name="placeholder_email" translatable="false">mail@mail.com</string>
    <string name="placeholder_number" translatable="false">25</string>
    <string name="placeholder_decimal" translatable="false">12.00</string>
    <string name="placeholder_date" translatable="false">15–03–2015</string>
    <string name="placeholder_desc" translatable="false">This is a description.</string>
    <string name="placeholder_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius nisi, a mattis erat. Etiam sit amet orci et risus imperdiet vehicula vitae in sapien. Donec a tellus a odio laoreet elementum. Ut tempor sem ac viverra volutpat. Pellentesque efficitur, ipsum a suscipit elementum, leo ipsum aliquet dui, sit amet accumsan diam arcu et velit</string>

    <string name="total_title">Total</string>

    <string name="liter_for_km_inside" translatable="false">0.109</string>
    <string name="liter_for_km_average" translatable="false">0.082</string>
    <string name="liter_for_km_outside" translatable="false">0.067</string>
    <string name="price_for_liter" translatable="false">1.30</string>
    <string name="save">Save</string>

    <string name="tv_liter_for_km_inside">How many liters does 1 km driving cost inside town?</string>
    <string name="tv_liter_for_km_average">How many liters does 1 km driving cost on average?</string>
    <string name="tv_liter_for_km_outside">How many liters does 1 km driving cost outside town?</string>

    <string name="tv_price_for_liter">How much does one liter cost?</string>
    <string name="hint_paid" translatable="false">54.50</string>
    <string name="paid">Paid</string>
    <string name="me">Me</string>
    <string name="ok">Ok</string>
    <string name="name">Henk...</string>
    <string name="btn_add">Add</string>
    <string name="reset">reset</string>
    <string name="reset_warning">Are you sure you want to remove all current rides?</string>


</resources>
