<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_home"
            android:title="@string/nav_drawer_home" />
    </group>

    <item android:title="@string/nav_drawer_group_functions">
        <menu>
            <item
                android:id="@+id/nav_drawer_all_records"
                android:checkable="true"
                android:title="@string/title_all_records" />
            <item
                android:id="@+id/nav_drawer_bill"
                android:checkable="true"
                android:title="@string/title_bill" />
            <item
                android:id="@+id/nav_drawer_payment"
                android:checkable="true"
                android:title="@string/title_payment" />
            <item
                android:id="@+id/nav_drawer_my_records"
                android:checkable="true"
                android:title="@string/title_my_records" />
        </menu>
    </item>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_settings"
            android:title="@string/title_settings" />
    </group>


</menu>
